<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_const2">

    <TextView
        android:id="@+id/textProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/profile"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/clearN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textProfile" />

    <Button
        android:id="@+id/clearN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textProfile" />

    <EditText
        android:id="@+id/passText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/clearP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <Button
        android:id="@+id/clearP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearN" />

    <Button
        android:id="@+id/kakuninButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="確認"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/nendai"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/check10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passText" />

    <CheckBox
        android:id="@+id/check10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/y10"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/check20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/check20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/y20"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/check30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check10" />

    <CheckBox
        android:id="@+id/check30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/y30"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/kakuninButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check20" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/seibetu"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/check10"
        app:layout_constraintTop_toBottomOf="@+id/passText" />

    <RadioGroup
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/kakuninButton"
        app:layout_constraintStart_toEndOf="@+id/check20"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/radioOtoko"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:checked="true"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/radioOnna"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/woman" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>